@@ -153,7 +153,7 @@ sub xst_ishare_dhcp_set_conf
 
   return 0 if !$overwrite;
 
-  $info = &xst_network_active_interfaces_get_info ();
+  $info = &xst_network_interfaces_get_info ();
   
   foreach $dev (@$devs)
   {
