@@ -182,12 +182,12 @@ sub xst_network_find_hosts
 {
   my ($iface, $ifaces, $dev, $hosts_str, @hosts, $proc, @procs);
 
-  $ifaces = &xst_network_active_interfaces_get_info ();
+  $ifaces = &xst_network_interfaces_get_info ();
 
   foreach $dev (keys %$ifaces)
   {
     $iface = $$ifaces{$dev};
-    if (exists $$iface{"bcast"})
+    if ($$iface{"active"} && exists $$iface{"bcast"})
     {
       push @procs, &xst_process_fork (\&xst_network_ping_broadcast_call, $$iface{"bcast"});
     }
@@ -360,26 +360,34 @@ sub xst_network_dialing_get
 }
 
 # FIXME: this depends a lot on ifconfig's output.
-sub xst_network_active_interfaces_get_info
+sub xst_network_interfaces_get_info
 {
   my ($dev, %ifaces, $fd);
 
   &xst_report_enter ();
   &xst_report ("network_iface_active_get");
 
-  $fd = &xst_file_run_pipe_read ("ifconfig");
+  $fd = &xst_file_run_pipe_read ("ifconfig -a");
   return {} if $fd eq undef;
   
   while (<$fd>)
   {
     chomp;
-    $dev = $1 if /^([^ \t:]+)/;
+    if (/^([^ \t:]+)/)
+    {
+      $dev = $1;
+      $ {$ifaces{$dev}}{"active"} = 0;
+      $ {$ifaces{$dev}}{"dev"}    = $dev;
+    }
+    
+    s/^[ \t]+//;
     if ($dev)
     {
       $ {$ifaces{$dev}}{"hwaddr"}  = $1 if /HWaddr[ \t]+([^ \t]+)/i;
       $ {$ifaces{$dev}}{"addr"}    = $1 if /addr:([^ \t]+)/i;
       $ {$ifaces{$dev}}{"mask"}    = $1 if /mask:([^ \t]+)/i;
       $ {$ifaces{$dev}}{"bcast"}   = $1 if /bcast:([^ \t]+)/i;
+      $ {$ifaces{$dev}}{"active"}  = 1  if /^UP[ \t]/;
     }
   }
   &xst_file_close ($fd);
